--- a/css/main.css
+++ b/css/main.css
@@ -13,8 +13,8 @@
 /* Fonts */
 :root {
   --default-font: "Open Sans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --heading-font: "Jost", sans-serif;
-  --nav-font: "Poppins", sans-serif;
+  --heading-font: "Open Sans", sans-serif;
+  --nav-font: "Open Sans", sans-serif;
 }
 
 /* Global Colors */
